{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 36,
  "lineage": "a08f3bcf-a210-78f2-5827-d953ffaa6646",
  "resources": [
    {
      "module": "module.Nat_Gateway[\"nat1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0263d8f77849fac1d",
            "arn": "arn:aws:ec2:us-east-1:782989862342:elastic-ip/eipalloc-0263d8f77849fac1d",
            "association_id": "eipassoc-0479a8fccf52caa6c",
            "domain": "vpc",
            "id": "eipalloc-0263d8f77849fac1d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f2d09a6cc33cecee",
            "private_dns": "ip-10-0-0-74.ec2.internal",
            "private_ip": "10.0.0.74",
            "public_dns": "ec2-54-85-244-47.compute-1.amazonaws.com",
            "public_ip": "54.85.244.47",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.Nat_Gateway[\"nat1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0263d8f77849fac1d",
            "association_id": "eipassoc-0479a8fccf52caa6c",
            "connectivity_type": "public",
            "id": "nat-0043a5332ed131861",
            "network_interface_id": "eni-0f2d09a6cc33cecee",
            "private_ip": "10.0.0.74",
            "public_ip": "54.85.244.47",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-003826bf64948647d",
            "tags": {
              "Name": "My-NAT"
            },
            "tags_all": {
              "Name": "My-NAT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway[\"Igw1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:internet-gateway/igw-0317652786ff18295",
            "id": "igw-0317652786ff18295",
            "owner_id": "782989862342",
            "region": "us-east-1",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pri1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0018c9de0df52fe07",
            "region": "us-east-1",
            "route_table_id": "rtb-0f1ad57968652b68c",
            "subnet_id": "subnet-04ff3e750153a39fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pri2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f37f3404ad098047",
            "region": "us-east-1",
            "route_table_id": "rtb-0f1ad57968652b68c",
            "subnet_id": "subnet-015092be510bc885e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pri3\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7413dc6c8aa5665",
            "region": "us-east-1",
            "route_table_id": "rtb-0f1ad57968652b68c",
            "subnet_id": "subnet-093ebf14231e03b49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pub1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01015b672833d3384",
            "region": "us-east-1",
            "route_table_id": "rtb-05722d9b957173d95",
            "subnet_id": "subnet-003826bf64948647d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pub2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c28a60540ddb632",
            "region": "us-east-1",
            "route_table_id": "rtb-05722d9b957173d95",
            "subnet_id": "subnet-008043bb7e22110e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association[\"pub3\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a325aaf7eeec4e9",
            "region": "us-east-1",
            "route_table_id": "rtb-05722d9b957173d95",
            "subnet_id": "subnet-06d2d51b9a34dfaa2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table_module.aws_route_table.my_route_table",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"privatert1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:route-table/rtb-0f1ad57968652b68c",
            "id": "rtb-0f1ad57968652b68c",
            "owner_id": "782989862342",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0043a5332ed131861",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "rtb-0f1ad57968652b68c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"publicrt1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:route-table/rtb-05722d9b957173d95",
            "id": "rtb-05722d9b957173d95",
            "owner_id": "782989862342",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0317652786ff18295",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "rtb-05722d9b957173d95",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Nat_Gateway.aws_eip.nat_eip",
            "module.Nat_Gateway.aws_nat_gateway.nat",
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_Group[\"Eks_sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:security-group/sg-0e27b780a0613d61e",
            "description": "This sg for Eks",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e27b780a0613d61e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow http port in",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow https port",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Eks_sg",
            "name_prefix": "",
            "owner_id": "782989862342",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "eks-sg"
            },
            "tags_all": {
              "name": "eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "sg-0e27b780a0613d61e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_Group[\"Eks_sg\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:security-group-rule/sgr-08915750ce0708bb9",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-08915750ce0708bb9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e27b780a0613d61e",
            "security_group_rule_id": "sgr-08915750ce0708bb9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "sgr-08915750ce0708bb9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_Group.aws_security_group.Eks_sg",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_Group[\"Eks_sg\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http_from_vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:security-group-rule/sgr-0013d44ed6042802c",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow http port in",
            "from_port": 80,
            "id": "sgr-0013d44ed6042802c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e27b780a0613d61e",
            "security_group_rule_id": "sgr-0013d44ed6042802c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "sgr-0013d44ed6042802c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_Group.aws_security_group.Eks_sg",
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": "https_from_vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:security-group-rule/sgr-00d0cb8d276b41f4f",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow https port",
            "from_port": 443,
            "id": "sgr-00d0cb8d276b41f4f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e27b780a0613d61e",
            "security_group_rule_id": "sgr-00d0cb8d276b41f4f",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "sgr-00d0cb8d276b41f4f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_Group.aws_security_group.Eks_sg",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private_subnet_1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:subnet/subnet-04ff3e750153a39fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ff3e750153a39fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782989862342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_private_subnet_1_us-east-1a"
            },
            "tags_all": {
              "Name": "EKS_private_subnet_1_us-east-1a"
            },
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "subnet-04ff3e750153a39fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private_subnet_2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:subnet/subnet-015092be510bc885e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015092be510bc885e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782989862342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_private_subnet_2_us-east-1b"
            },
            "tags_all": {
              "Name": "EKS_private_subnet_2_us-east-1b"
            },
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "subnet-015092be510bc885e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private_subnet_3\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:subnet/subnet-093ebf14231e03b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093ebf14231e03b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782989862342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_private_subnet_3_us-east-1c"
            },
            "tags_all": {
              "Name": "EKS_private_subnet_3_us-east-1c"
            },
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "subnet-093ebf14231e03b49",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"public_subnet_1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:subnet/subnet-003826bf64948647d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003826bf64948647d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782989862342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_public_subnet_1_us-east-1a"
            },
            "tags_all": {
              "Name": "EKS_public_subnet_1_us-east-1a"
            },
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "subnet-003826bf64948647d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"public_subnet_2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:subnet/subnet-008043bb7e22110e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008043bb7e22110e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782989862342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_public_subnet_2_us-east-1b"
            },
            "tags_all": {
              "Name": "EKS_public_subnet_2_us-east-1b"
            },
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "subnet-008043bb7e22110e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"public_subnet_3\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:subnet/subnet-06d2d51b9a34dfaa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d2d51b9a34dfaa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782989862342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_public_subnet_3_us-east-1c"
            },
            "tags_all": {
              "Name": "EKS_public_subnet_3_us-east-1c"
            },
            "vpc_id": "vpc-03d494e220ec01d01"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "subnet-06d2d51b9a34dfaa2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782989862342:vpc/vpc-03d494e220ec01d01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f96c0fd2972b8f7",
            "default_route_table_id": "rtb-032a498a0fa0d1563",
            "default_security_group_id": "sg-0b7041c68de9262fc",
            "dhcp_options_id": "dopt-00bfeb6c9774ec443",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d494e220ec01d01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032a498a0fa0d1563",
            "owner_id": "782989862342",
            "region": "us-east-1",
            "tags": {
              "Name": "EKS_VPC"
            },
            "tags_all": {
              "Name": "EKS_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "782989862342",
            "id": "vpc-03d494e220ec01d01",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}